<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/attention_texttitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x60"
        android:background="@color/deep_orange"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/attention_back"
            android:layout_width="@dimen/x30"
            android:layout_height="@dimen/x30"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x5"
            android:background="@drawable/back_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="注意事项"
            android:textColor="@android:color/white"
            android:textSize="@dimen/x19"
            android:textStyle="bold"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/x10"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="附近人"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_nearby_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="一键加好友"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_add_friend_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="一键加群友"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_add_group_friend_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="公众号"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_public_num_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="漂流瓶"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_drift_bottle_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="一键发消息"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_send_message_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/colorchange"
                android:gravity="center|left"
                android:paddingBottom="@dimen/x5"
                android:paddingLeft="@dimen/x20"
                android:paddingRight="@dimen/x20"
                android:paddingTop="@dimen/x5"
                android:text="白名单"
                android:textColor="#fff"
                android:textSize="15sp"/>

            <TextView
                style="@style/font14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wechat_whitelist_content"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
